AUGREL/src/objects/Financial_Account__c.object
<CustomObject>
    <description>Loan and lease products purchased by customers to finance vehicle acquisition. The financial
account represents the financial obligation carried by the borrower and co-­‐borrower. This is
TFS’s core business product and servicing the financial account is the primary focus of
operations.</description>
    <fields>
        <fullName>ACH_Account_Number__c</fullName>
        <description>ACH account number</description>
        <label>ACH Account Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_Account_Type__c</fullName>
        <description>ACH account type</description>
        <label>ACH_Account_Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_Current_Effective_Date__c</fullName>
        <description>Current effective date for ACH accounts</description>
        <label>ACH Current Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACH_Original_Effective_Date__c</fullName>
        <description>Original effective date for ACH accounts</description>
        <label>ACH Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACH_Payment_Date_Next__c</fullName>
        <description>Next ACH due date</description>
        <label>ACH Payment Date Next</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACH_Routing_Number__c</fullName>
        <description>ACH routing number</description>
        <label>ACH Routing Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segmentation_Code__c</fullName>
        <description>SRC: Salesforce
INT: N
Trans: Y
BU: Field Service, Charge Off Accounts Servicing, IVR 
FD: This code will be utilized by the IVR to categorize accounts for routing purposes. At this time, this code is used to identify charged off accounts.</description>
        <formula>if (NOT ISBLANK( Charge_Of_Finance_Account_Number__c ),&apos;CHG&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Segmentation Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amor_Methodology__c</fullName>
        <label>Amor Methodology</label>
        <picklist>
            <picklistValues>
                <fullName>Amor Methodology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Archive_Flag__c</fullName>
        <label>Archive Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Account__c</fullName>
        <formula>IF(Collection_List_Number_1__c = &quot;1008&quot;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSG_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: BSIS
INT: Informatica BSG Update, IVR Lookup
Trans: N
BU:   IVR Lookup, Customer Service
FD:   BSG Stands for Business Service Group, meaning the borrower has fleet of accounts and there is a different set of agents who handle these kind of accounts. So used in the IVR call flow.

Change applied via. RFC# CHG0044095</description>
        <label>BSG Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balloon_Account__c</fullName>
        <description>SRC: HOST/Financial Refresh
INT: Informatica Financial Refresh
Trans: N
BU: All
FD: Indicate if the Account is a Balloon account or not.</description>
        <formula>NOT(ISBLANK(TRIM(Balloon_Code__c)))</formula>
        <label>Balloon Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balloon_Code__c</fullName>
        <description>Type of Loan</description>
        <label>Balloon_Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Bankruptcy Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Flag_Formula__c</fullName>
        <formula>IF(Bankruptcy_Flag__c &lt;&gt; &quot;&quot;, Bankruptcy_Flag__c &amp; &quot; - &quot;, &quot;&quot;) &amp; Bankruptcy_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bankruptcy Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Flag__c</fullName>
        <description>bankruptcy flag</description>
        <label>Bankruptcy Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Accounts (Branch)</relationshipLabel>
        <relationshipName>Financial_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Account__c</fullName>
        <description>New field added to support IVR interface requirement. This formula field created to return Business Account based on Privacy_State__c value being &apos;BU&apos; or &apos;BVN&apos;.</description>
        <formula>OR(Privacy_State_Code__c=&apos;BU&apos;,Privacy_State_Code__c=&apos;BNV&apos;)</formula>
        <inlineHelpText>New field added to support IVR interface requirement. This formula field created to return Business Account based on Privacy_State__c value being &apos;BU&apos; or &apos;BVN&apos;.</inlineHelpText>
        <label>Business Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_BK_Filing_Date__c</fullName>
        <description>SRC: UCM 
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: TFS BK Filing Date</description>
        <label>BK Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO_Host_Account_Number__c</fullName>
        <description>***Populated by a workflow rule*** 

Contains the CO Host formatted account number.</description>
        <label>CO Host Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Interest_Accumulated_YTD__c</fullName>
        <description>SRC: HOST
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Interest Accumulated YTD</description>
        <label>Interest Accumulated YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Scrub_for_Military__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: UCM
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Scrub for Military</description>
        <label>Scrub for Military</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capture_Quote_Payoff__c</fullName>
        <description>Used in the Start Process: Early Termination/Voluntary Surrender</description>
        <label>Capture Quote Payoff</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChargeOff_Agency_Code__c</fullName>
        <description>SRC: RMS
INT: Y
Trans: N
BU: Field Service,Charge Off Accounts Servicing, IVR 
FD: The agency code associated with the RMS agency that is servicing the account.</description>
        <label>ChargeOff Agency Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Of_Finance_Account_Number__c</fullName>
        <description>Charge-Off Account Number</description>
        <label>Charge Of Finance Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_PerDiem_Total__c</fullName>
        <description>Total charge amount</description>
        <label>Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chargeoff__c</fullName>
        <label>Chargeoff</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charges_Late__c</fullName>
        <description>Late charges</description>
        <label>Late Charge Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charges_Miscellaneous__c</fullName>
        <description>Miscellaneous Charges</description>
        <label>Miscellaneous Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charges_Unpaid_Other__c</fullName>
        <description>SRC: Host - IR (Information Repository)
INT: Data Feed from IR
Trans: &lt;Y/N&gt;
BU: RL
FD: Fees assessed to the customer that are classified differently from other miscellaneous fees - note that they are included in Miscellaneous Charges</description>
        <label>Unpaid Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Code__c</fullName>
        <description>Account Status</description>
        <label>Close Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Edit_Message__c</fullName>
        <description>Edit message code</description>
        <label>Code Edit Message</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Num_Months_Past_Due__c</fullName>
        <label>Number of Payments Past Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Indicator__c</fullName>
        <description>SRC: AB6 Requirements
INT: NA
Trans: NA
BU: Collections
FD: A image indicator showing red/green/yellow image based on Last Activity Date.</description>
        <formula>CASE( 
		( CASE(
				MOD( (TODAY()-MIN(IF(ISNULL(Last_Activity_Date__c),99999,TODAY()-Last_Activity_Date__c),IF(ISNULL(Last_Activity_Date_NSF__c),99999,TODAY()-Last_Activity_Date_NSF__c))) - DATE(1985,6,24),7), 
				  0 , CASE( MOD( TODAY() - (TODAY()-MIN(IF(ISNULL(Last_Activity_Date__c),99999,TODAY()-Last_Activity_Date__c),IF(ISNULL(Last_Activity_Date_NSF__c),99999,TODAY()-Last_Activity_Date_NSF__c))) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
				  1 , CASE( MOD( TODAY() - (TODAY()-MIN(IF(ISNULL(Last_Activity_Date__c),99999,TODAY()-Last_Activity_Date__c),IF(ISNULL(Last_Activity_Date_NSF__c),99999,TODAY()-Last_Activity_Date_NSF__c))) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
				  2 , CASE( MOD( TODAY() - (TODAY()-MIN(IF(ISNULL(Last_Activity_Date__c),99999,TODAY()-Last_Activity_Date__c),IF(ISNULL(Last_Activity_Date_NSF__c),99999,TODAY()-Last_Activity_Date_NSF__c))) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
				  3 , CASE( MOD( TODAY() - (TODAY()-MIN(IF(ISNULL(Last_Activity_Date__c),99999,TODAY()-Last_Activity_Date__c),IF(ISNULL(Last_Activity_Date_NSF__c),99999,TODAY()-Last_Activity_Date_NSF__c))) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
				  4 , CASE( MOD( TODAY() - (TODAY()-MIN(IF(ISNULL(Last_Activity_Date__c),99999,TODAY()-Last_Activity_Date__c),IF(ISNULL(Last_Activity_Date_NSF__c),99999,TODAY()-Last_Activity_Date_NSF__c))) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
				  5 , CASE( MOD( TODAY() - (TODAY()-MIN(IF(ISNULL(Last_Activity_Date__c),99999,TODAY()-Last_Activity_Date__c),IF(ISNULL(Last_Activity_Date_NSF__c),99999,TODAY()-Last_Activity_Date_NSF__c))) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
				  6 , CASE( MOD( TODAY() - (TODAY()-MIN(IF(ISNULL(Last_Activity_Date__c),99999,TODAY()-Last_Activity_Date__c),IF(ISNULL(Last_Activity_Date_NSF__c),99999,TODAY()-Last_Activity_Date_NSF__c))) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
				  999
			  ) 
			  + 
			  (FLOOR(( TODAY() - (TODAY()-MIN(IF(ISNULL(Last_Activity_Date__c),99999,TODAY()-Last_Activity_Date__c),IF(ISNULL(Last_Activity_Date_NSF__c),99999,TODAY()-Last_Activity_Date_NSF__c))) )/7)*5) 
		),
  
	  0,IMAGE(&quot;/resource/Green&quot;,&quot;Green&quot;,15,15),
	  1,IMAGE(&quot;/resource/Green&quot;,&quot;Green&quot;,15,15),
	  2,IMAGE(&quot;/resource/Green&quot;,&quot;Green&quot;,15,15),
	  3,IMAGE(&quot;/resource/Green&quot;,&quot;Green&quot;,15,15),
	  4,IMAGE(&quot;/resource/Yellow&quot;,&quot;Yellow&quot;,15,15),
	  5,IMAGE(&quot;/resource/Yellow&quot;,&quot;Yellow&quot;,15,15),
          6,IMAGE(&quot;/resource/Yellow&quot;,&quot;Yellow&quot;,15,15),
	  IMAGE(&quot;/resource/Red&quot;,&quot;Red&quot;,15,15) 
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection Activity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_List_Description__c</fullName>
        <label>Collection List Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_List_Number_1__c</fullName>
        <label>Collection List Number 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_List_Number_2__c</fullName>
        <label>Collection List Number 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_List_Number_3__c</fullName>
        <label>Collection List Number 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_List_Number_Formula__c</fullName>
        <formula>IF(Collection_List_Number_1__c &lt;&gt; &quot;&quot;, Collection_List_Number_1__c &amp; &quot; - &quot;, &quot;&quot;) &amp; Collection_List_Status_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection List Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_List_Status_1__c</fullName>
        <label>Collection List Status 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_List_Status_2__c</fullName>
        <label>Collection List Status 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_List_Status_3__c</fullName>
        <label>Collection List Status 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Notifications__c</fullName>
        <formula>IF(Do_Not_Call__c, 
IMAGE(&quot;/resource/DoNotCall&quot; , &quot;Do Not Call&quot; ) &amp; &quot; &quot;,&quot;&quot;) 
&amp; 
IF( 
AND( 
Collection_List_Number_1__c = &quot;1863&quot;, 
OR( 
Collection_List_Status_1__c = &quot;A&quot;, 
Collection_List_Status_1__c = &quot;P&quot; 
)), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000003DMn6&amp;oid=00D2C0000000NHf&quot;, &quot;Late Stage Skip&quot;) &amp; &quot; &quot;, 
&quot;&quot; 
) 
&amp; 
IF( 
OR( 
AND( 
Collection_List_Number_1__c != &quot;1706&quot;, 
Collection_List_Number_1__c != null, 
Collection_List_Status_1__c != &quot;C&quot;, 
AND(NOT(ISPICKVAL(Finance_Account_Status__c, &quot;Close&quot;)), NOT(ISPICKVAL(Finance_Account_Status__c, &quot;Lease Reversed&quot;))), 
VALUE(History_Counter_Days_Past_Due__c) &gt; 0, 
OR( 
RecordType.Name = &quot;Retail&quot; &amp;&amp; History_Counter_Payments_Made__c = 0, 
RecordType.Name = &quot;Lease&quot; &amp;&amp; History_Counter_Payments_Made__c &lt;= 1 
) 
), 
AND( 
OR( 
Collection_List_Number_1__c = &quot;1704&quot;, 
Collection_List_Number_1__c = &quot;1705&quot; 
), 
Collection_List_Status_1__c != &quot;C&quot; 
) 
), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002D6rE&amp;oid=00D2C0000000NHf&quot;, &quot;First Payment Default&quot;) &amp; &quot; &quot;, 
&quot;&quot; 
) 
&amp; 
IF( 
Collection_List_Number_1__c = &quot;1860&quot;||Collection_List_Number_1__c = &quot;1861&quot;||Collection_List_Number_1__c = &quot;1862&quot;||Primary_Garage_State__c=&quot;MA&quot;, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002D7f9&amp;oid=00D2C0000000NHf&quot;, &quot;MA Use Unique ID&quot;) &amp; &quot; &quot;, 
&quot;&quot; 
) 
&amp; 
IF( 
OR( 
Collection_List_Number_1__c = null, 
Collection_List_Status_1__c = &quot;C&quot; 
), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002DB8x&amp;oid=00D2C0000000NHf&quot;, &quot;Current Acct Document Stars&quot;) &amp; &quot; &quot;, 
&quot;&quot; 
) 
&amp; 
IF( 
OR( 
AND( 
Risk_Strategy_Code_3__c &lt;&gt; &apos;NOR&apos;, 
OR( 
AND( 
MOD( TODAY() - DATE(1900, 1, 1), 7) = 0, 
VALUE(History_Counter_Days_Past_Due__c) &gt;= 73 
), 
VALUE(History_Counter_Days_Past_Due__c) &gt;= 75 
), 
Collection_List_Number_1__c &lt;&gt; null, 
Collection_List_Status_1__c &lt;&gt; &apos;C&apos; 
), 
AND( 
Risk_Strategy_Code_3__c = &apos;NOR&apos;, 
OR( 
AND( 
MOD( TODAY() - DATE(1900, 1, 1), 7) = 0, 
VALUE(History_Counter_Days_Past_Due__c) &gt;= 81 
), 
VALUE(History_Counter_Days_Past_Due__c) &gt;= 83 
), 
Collection_List_Number_1__c &lt;&gt; null, 
Collection_List_Status_1__c &lt;&gt; &apos;C&apos; 
) 
), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002EDDj&amp;oid=00D2C0000000NHf&quot;, &quot;Eligible for Repossession&quot;) &amp; &quot; &quot;, 
&quot;&quot; 
) 

&amp; 
IF( 

Primary_Garage_State__c = &quot;NH&quot;, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002EpmO&amp;oid=00D2C0000000NHf&quot;, &quot;New Hampshire Collections Notification&quot;) &amp; &quot; &quot;, 
&quot;&quot; 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection Notifications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Primary_Note_Edit_Date__c</fullName>
        <description>Via workflow, capture the last time an edit was made to Collection Primary Note by an end user so integration can perform targeted outgoing updates</description>
        <label>Collection Primary Note Edit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collection_Primary_Note__c</fullName>
        <description>Permanent notes</description>
        <label>Collection Primary Note</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Recourse_Code__c</fullName>
        <description>Copy of the recourse code from the case</description>
        <label>Collection Recourse Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <label>Communication Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Type__c</fullName>
        <label>Consumer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Associate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <description>&quot;Lease: The date the lease contract was signed</description>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Receivable__c</fullName>
        <description>SRC: Host - IR (Information Repository)
INT: Data Feed from IR
Trans: &lt;Y/N&gt;
BU: RL
FD: Lease outstanding balance - lease equivalent to loan balance for retail loans in the Rights Letters process</description>
        <label>Contract Receivable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Counter_Payments_Remaining__c</fullName>
        <description>Payments remain</description>
        <label>Counter Payments Remaining</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Dispute_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Dispute Waiver on the FA for the life of the Loan if a Customer has ever been granted a Waiver</description>
        <inlineHelpText>Indicates on the FA if a Credit Dispute Waiver has ever been granted</inlineHelpText>
        <label>Credit Dispute Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Marker_30_60_90__c</fullName>
        <description>Concatenates 30, 60 &amp; 90 day credit marker information.  Applicable to Lease accounts.</description>
        <formula>TEXT(History_Counter_Thirty_Days_PastDue__c) &amp; &quot; / &quot; &amp; 
TEXT(History_Counter_SixtyDaysPastDue__c) &amp; &quot; / &quot; &amp; 
TEXT(History_Counter_Ninety_Days_Past_Due__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Marker (30/60/90)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Marker__c</fullName>
        <description>Concatenates 15, 30, 60, &amp; 90 day credit stats.</description>
        <formula>TEXT(History_Counter_Fifteen_Days_Past_Due__c) &amp; &quot; / &quot; &amp; 
TEXT(History_Counter_Thirty_Days_PastDue__c) &amp; &quot; / &quot; &amp; 
TEXT(History_Counter_SixtyDaysPastDue__c) &amp; &quot; / &quot; &amp; 
TEXT(History_Counter_Ninety_Days_Past_Due__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Marker (15/30/60/90)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Use_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Use Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cure_Amount__c</fullName>
        <description>Parses the cure amount from the most recent cure note.</description>
        <formula>IF(
 AND(
  CONTAINS(LOWER(Most_Recent_Cure_Note__c),&quot;cure notice sent&quot;),
  CONTAINS(Most_Recent_Cure_Note__c,&quot;$&quot;)
 ),
 MID(
  Most_Recent_Cure_Note__c,
  FIND(&quot;$&quot;,Most_Recent_Cure_Note__c),
  FIND(&quot;.&quot;,Most_Recent_Cure_Note__c, FIND(&quot;$&quot;,Most_Recent_Cure_Note__c)) - FIND(&quot;$&quot;,Most_Recent_Cure_Note__c) + 3
 ),
 &quot;&quot;
)</formula>
        <label>Cure Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cure_Expiration_Date__c</fullName>
        <description>Parses out the expiration date from the most recent cure note</description>
        <formula>IF(
 AND(
  CONTAINS(LOWER(Most_Recent_Cure_Note__c),&quot;cure notice sent&quot;),
  CONTAINS(LOWER(Most_Recent_Cure_Note__c),&quot;expires&quot;)
 ),
 LEFT(MID(Most_Recent_Cure_Note__c,FIND(&quot;expires&quot;,LOWER(Most_Recent_Cure_Note__c))+LEN(&quot;expires&quot;)+1,6),2) &amp; &quot;/&quot; &amp; 
 MID(MID(Most_Recent_Cure_Note__c,FIND(&quot;expires&quot;,LOWER(Most_Recent_Cure_Note__c))+LEN(&quot;expires&quot;)+1,6),3,2) &amp; &quot;/&quot; &amp; 
 RIGHT(MID(Most_Recent_Cure_Note__c,FIND(&quot;expires&quot;,LOWER(Most_Recent_Cure_Note__c))+LEN(&quot;expires&quot;)+1,6),2),
 &quot;&quot;
)</formula>
        <label>Cure Expiration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>&quot;Lease: Lease number</description>
        <label>Customer Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>CASE(TEXT(Finance_Account_Type__c),
&quot;Consumer Customer&quot;, &quot;Consumer&quot;,
&quot;Business Customer&quot;, &quot;Business&quot;,
TEXT(Finance_Account_Type__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <formula>Dealership__r.Dealer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Guaranty_Description__c</fullName>
        <description>A formula used to translate the recourse code into the Dealer Guaranty Description.</description>
        <formula>IF( 
RecordType.Name = &apos;Retail&apos;, 
CASE( 
Collection_Recourse_Code__c, 
&apos;R&apos;, &apos;R - Full Recourse&apos;, 
&apos;X&apos;, &apos;X - Partial Recourse&apos;, 
&apos;P&apos;, &apos;P - Repurchase&apos;, 
&apos;L&apos;, &apos;L - Limited Recourse&apos;, 
&apos;N&apos;, &apos;N - No Recourse&apos;, 
&apos;&apos; 
), 
CASE( 
Collection_Recourse_Code__c, 
&apos;P&apos;, &apos;P - Partial DG for Residual Value&apos;, 
&apos;C&apos;, &apos;C - Partial Guaranty for Cap (advance)&apos;, 
&apos;B&apos;, &apos;B - Partial Guaranty for Residual &amp; Cap&apos;, 
&apos;T&apos;, &apos;T - Limited Term Repurchase&apos;, 
&apos;F&apos;, &apos;F - Full Dealer Guaranties&apos;, 
&apos;R&apos;, &apos;R - Repurchase Guaranty&apos;, 
&apos;&apos; 
) 
)</formula>
        <label>Dealer Guaranty Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Rebate_Display__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to display and use the Dealer Rebate value only when the loan is a pre-computed retail loan.</description>
        <formula>IF(RecordType.Name = &apos;Retail&apos; &amp;&amp; (MID(Financial_Account_Number__c, 4, 1) = &apos;6&apos; || MID(Financial_Account_Number__c, 4, 1) = &apos;7&apos;),
0,
Dealer_Rebate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Rebate__c</fullName>
        <description>SRC: Host - IR (Information Repository)
INT: Data Feed from IR
Trans: &lt;Y/N&gt;
BU: RL
FD: A performance bonus for the dealer in a precomputed (rule of 78s) loan that is collected from the dealer on a pro rated basis in an early payoff or termination</description>
        <label>Dealer Rebate Master File</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master-Detail Relationship to dealership (Account)</description>
        <label>Dealership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Denial_Reason_Code__c</fullName>
        <label>Denial Reason Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denial_Reason_Description__c</fullName>
        <label>Denial Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>New formula field added to return department value based on dealer code value from dealership. 

If dealership.dealerCode starts with 6 a value LEXUS is returned otherwise a value TOYOTA is returned.</description>
        <formula>IF(BEGINS( Dealership__r.Dealer_Code__c , &apos;6&apos;),&apos;LEXUS&apos;,&apos;TOYOTA&apos;)</formula>
        <inlineHelpText>New formula field added to return department value based on dealer code value from dealership. 

If dealership.dealerCode starts with 6 a value LEXUS is returned otherwise a value TOYOTA is returned.</inlineHelpText>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Sales__c</fullName>
        <formula>if(OR(Dealership__r.BillingState=&apos;AK&apos;,Dealership__r.BillingState=&apos;AR&apos;,Dealership__r.BillingState=&apos;CA&apos;,Dealership__r.BillingState=&apos;CO&apos;,Dealership__r.BillingState=&apos;DE&apos;,Dealership__r.BillingState=&apos;GA&apos;,Dealership__r.BillingState=&apos;IN&apos;,Dealership__r.BillingState=&apos;IA&apos;,Dealership__r.BillingState=&apos;KS&apos;,Dealership__r.BillingState=&apos;KY&apos;,Dealership__r.BillingState=&apos;LA&apos;,Dealership__r.BillingState=&apos;MD&apos;,Dealership__r.BillingState=&apos;MA&apos;,Dealership__r.BillingState=&apos;MN&apos;,Dealership__r.BillingState=&apos;MS&apos;,Dealership__r.BillingState=&apos;MO&apos;,Dealership__r.BillingState=&apos;MT&apos;,Dealership__r.BillingState=&apos;NE&apos;,Dealership__r.BillingState=&apos;NH&apos;,Dealership__r.BillingState=&apos;NM&apos;,Dealership__r.BillingState=&apos;ND&apos;,Dealership__r.BillingState=&apos;OK&apos;,Dealership__r.BillingState=&apos;OR&apos;,Dealership__r.BillingState=&apos;PA&apos;,Dealership__r.BillingState=&apos; RI&apos;,Dealership__r.BillingState=&apos;TX&apos;,Dealership__r.BillingState=&apos;UT&apos;,Dealership__r.BillingState=&apos;VT&apos;,Dealership__r.BillingState=&apos;VA&apos;,Dealership__r.BillingState=&apos;WV&apos;,Dealership__r.BillingState=&apos;WY&apos;),&apos;Eligble&apos;,
         if(OR(Dealership__r.BillingState=&apos;DC&apos;,Dealership__r.BillingState=&apos; HI&apos;,Dealership__r.BillingState=&apos; NC&apos;,Dealership__r.BillingState=&apos; SD&apos;,Dealership__r.BillingState=&apos; FL&apos;,Dealership__r.BillingState=&apos; ME&apos;,Dealership__r.BillingState=&apos; SC&apos;,Dealership__r.BillingState=&apos; WI&apos;)
,&apos;Not Elible&apos;,
             if(OR(Dealership__r.BillingState=&apos;AL&apos;,Dealership__r.BillingState=&apos; AZ&apos;,Dealership__r.BillingState=&apos; CT&apos;,Dealership__r.BillingState=&apos; ID&apos;,Dealership__r.BillingState=&apos; IL&apos;,Dealership__r.BillingState=&apos; MI&apos;,Dealership__r.BillingState=&apos; NV&apos;,Dealership__r.BillingState=&apos; NJ&apos;,Dealership__r.BillingState=&apos; NY&apos;,Dealership__r.BillingState=&apos; OH&apos;,Dealership__r.BillingState=&apos; TN&apos;,Dealership__r.BillingState=&apos; WA&apos;)
,&apos;Tax Collecting&apos;
,&apos;Lease Only&apos;)
         )
     )</formula>
        <label>Direct Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <description>SRC: AB6 Requirements
INT: NA
Trans: NA
BU: Collections
FD: A Boolean flag showing if financial account is DNC registered.</description>
        <formula>IF(OR(Collection_List_Number_1__c==&apos;1801&apos;,Collection_List_Number_1__c==&apos;1802&apos;,Collection_List_Number_1__c==&apos;1807&apos;) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Message_Description__c</fullName>
        <description>To be provided by TFS</description>
        <label>Edit Message Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Account_Number__c</fullName>
        <description>***Populated by a workflow rule*** 

Contains the Exchange formatted account number.</description>
        <label>Exchange Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired_Term__c</fullName>
        <description>Expired term</description>
        <label>Expired Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extensions_Deferrals__c</fullName>
        <formula>CASE(Risk_Strategy_Code_1__c,
&quot;AAA&quot;,&quot;APPR - Approved if Conditions met&quot;,
&quot;CCC&quot;,&quot;COND - Approved if Conditions met&quot;,
&quot;DDD&quot;,&quot;DENY - Denied.  Requires Manager Approval&quot;,
&quot;&quot;, &quot;COND - Approved if Conditions met&quot;,
Risk_Strategy_Code_1__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extensions &amp; Deferrals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Assessed__c</fullName>
        <description>assessed deferred fee - value zero</description>
        <label>Fee Deferment Assessed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Last_Date__c</fullName>
        <description>Last defer date</description>
        <label>Fee Deferment Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Paid__c</fullName>
        <description>paid deferred fee - value zero</description>
        <label>Fee Deferment Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Waived__c</fullName>
        <description>waived deferred fee - value zero</description>
        <label>Fee Deferment Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Deferment_Zero_Value__c</fullName>
        <description>deferred fee - value zero</description>
        <label>Fee Deferment Zero Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Account_Archive_Type__c</fullName>
        <label>Finance Account Archive Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>